--- a/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
+++ b/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
@@ -81,6 +81,10 @@ paths:
         - $ref: '#/components/parameters/auth-id'
         #query
         - $ref: '#/components/parameters/redirectCode'
+        #headers
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       responses:
         '200':
           $ref: '#/components/responses/200_AuthorizeResponse'
@@ -108,6 +112,9 @@ paths:
         #headers
         - $ref: '#/components/parameters/X-Request-ID'
         - $ref: '#/components/parameters/X-XSRF-TOKEN'
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       requestBody:
         content:
           application/json:
@@ -139,6 +146,9 @@ paths:
         #headers
         - $ref: '#/components/parameters/X-Request-ID'
         - $ref: '#/components/parameters/X-XSRF-TOKEN'
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       requestBody:
         content:
           application/json:
@@ -171,6 +181,9 @@ paths:
         #headers
         - $ref: "#/components/parameters/X-Request-ID"
         - $ref: "#/components/parameters/X-XSRF-TOKEN"
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       requestBody:
         content:
           application/json:
@@ -216,6 +229,10 @@ paths:
         - $ref: '#/components/parameters/redirectState'
         #query
         - $ref: '#/components/parameters/redirectCode'
+        #headers
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       responses:
         '200':
           $ref: '#/components/responses/200_AuthorizeResponse'
@@ -239,6 +256,10 @@ paths:
         - $ref: '#/components/parameters/redirectState'
         #query
         - $ref: '#/components/parameters/redirectCode'
+        #headers
+        - $ref: "#/components/parameters/X-Timestamp-UTC"
+        - $ref: "#/components/parameters/X-Request-Signature"
+        - $ref: "#/components/parameters/fintech_id"
       responses:
         '200':
           $ref: '#/components/responses/200_AuthorizeResponse'
@@ -391,6 +412,36 @@ components:
         XSRF parameter used to validate a SessionCookie. The token matches the auth-id
         included in the requestpath and prefixing the cookie.
       example: abc123.faadsf93nlas32wx
+      schema:
+        type: string
+
+    X-Timestamp-UTC:
+      name: X-Timestamp-UTC
+      in: header
+      required: false
+      description: |
+        Request sending timestamp, defined by RFC2616.
+      example: "Tue, 14 Apr 2020 08:49:37 GMT"
+      schema:
+        type: string
+
+    X-Request-Signature:
+      name: X-Request-Signature
+      in: header
+      required: false
+      description: |
+        Signed with RSA algorithm data, to be validated by the server.
+      schema:
+        type: string
+        format: byte
+
+    fintech_id:
+      name: fintech_id
+      in: header
+      required: false
+      description: |
+        Unique ID that identifies fintech. It is used for security purposes.
+      example: "fintech_123"
       schema:
         type: string
 
