--- a/opba-banking-protocol-facade/pom.xml
+++ b/opba-banking-protocol-facade/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>fusionauth-jwt</artifactId>
             <version>3.1.7</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
