--- a/opba-auth-rest-api/src/main/resources/static/tpp_auth_api.yml
+++ b/opba-auth-rest-api/src/main/resources/static/tpp_auth_api.yml
@@ -162,7 +162,7 @@ components:
       type: object
       properties:
         xsrfToken:
-          type: String
+          type: string
           description: Authorization cookie hash
 
     generalError:
