--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -10,11 +10,10 @@ server:
 
     redirectcookie:
       secure: false
-      maxAge: 600
+      maxAge: 1800
       httpOnly: true
-      # path: /v1/{auth-id}/fromConsentOk
-      path: /
-      sameSite: Strict
+      path: /fintech-api-proxy/v1/{auth-id}
+      sameSite: Lax
 
       # sameSite: Strict|Lax|none
       # samesite SameSite prevents the browser from sending this cookie along with cross-site requests. Possible values for the flag are lax or strict.
@@ -23,6 +22,7 @@ server:
 
 tpp:
   url: http://localhost:8085
+  # url: http://localhost:18085
   fintechID: MY-SUPER-FINTECH-ID
   serviceSessionPassword: qwerty
 
@@ -34,6 +34,7 @@ mock:
 spring:
   datasource:
     url: jdbc:postgresql://localhost/open_banking?currentSchema=fintech
+    # url: jdbc:postgresql://localhost:15432/open_banking?currentSchema=fintech
     username: postgres
     password: docker
     type: com.zaxxer.hikari.HikariDataSource
@@ -55,4 +56,5 @@ spring:
 fintech-ui:
   redirect-url: http://localhost:4444/redirect-after-consent?redirectCode={redirectCode}
   unauthorized-url: http://localhost:4444/
-  exception-url: http://localhost:4444/excaption-redirect
+  exception-url: http://localhost:4444/redirect-after-consent-denied?redirectCode={redirectCode}
+
