--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
@@ -37,8 +37,8 @@ paths:
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/ServiceSessionPassword"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
-        - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
-        - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-OK"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Service-Session-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
@@ -74,8 +74,8 @@ paths:
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/ServiceSessionPassword"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
-        - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
-        - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-OK"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Service-Session-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
@@ -186,37 +186,6 @@ components:
       schema:
         type: string
 
-    Fintech-Redirect-URL-OK:
-      name: Fintech-Redirect-URL-OK
-      in: header
-      desription: |
-        This header provides the desired URL where PSU will be redirected back after authorisation session in case of
-        successful authorisation. This URL might contain unique Identifier of this User and/or Session,
-        recognisable by FinTech.
-        Since authorisation may be mandated by the bank at any time, this header to be included to all
-        service requests, even if PsuConsentSession already exists.
-      required: true
-      schema:
-        type: string
-      example: "https://example.com/myservice/sf3-3r33-3535?authResult=success"
-
-    Fintech-Redirect-URL-NOK:
-      name: Fintech-Redirect-URL-NOK
-      in: header
-      desription: |
-        This header provides the desired URL where PSU will be redirected back  after authorisation session in case of
-        unsuccessful authorisation (i.e. PSU's authorisation reject, technical failure, lack of credentials etc.).
-        This URL might contain unique Identifier of this User and/or Session,
-        recognisable by FinTech.
-        Since authorisation may be mandated by the bank at any time, this header to be included to all
-        service requests, even if PsuConsentSession already exists.
-      required: true
-      schema:
-        type: string
-      example: "https://example.com/myservice/sf3-3r33-3535/failure"
-
-
-
   responses:
     200_AccountsTransactions:
       description: OK
@@ -269,17 +238,17 @@ components:
           description: This shall be filled, if addressable resource are created by the ASPSP on the /accounts or /card-accounts endpoint.
           type: string
         iban:
-          $ref: "#/components/schemas/iban"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/iban"
         bban:
-          $ref: "#/components/schemas/bban"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/bban"
         pan:
-          $ref: "#/components/schemas/pan"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/pan"
         maskedPan:
-          $ref: "#/components/schemas/maskedPan"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/maskedPan"
         msisdn:
-          $ref: "#/components/schemas/msisdn"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/msisdn"
         currency:
-          $ref: "#/components/schemas/currencyCode"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/currencyCode"
         name:
           description: Name of the account given by the bank or the PSU in online-banking.
           type: string
@@ -293,7 +262,7 @@ components:
         status:
           $ref: "#/components/schemas/accountStatus"
         bic:
-          $ref: "#/components/schemas/bicfi"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/bicfi"
         linkedAccounts:
           description: Case of a set of pending card transactions, the APSP will provide the relevant cash account the card is set up on.
           type: string
@@ -322,7 +291,7 @@ components:
           type: string
           maxLength: 70
         ownerAddress:
-          $ref: "#/components/schemas/address"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/address"
 
     accountList:
       description: |
@@ -335,29 +304,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/accountDetails"
-
-    accountReference:
-      description: |
-        Reference to an account by either:
-          * IBAN, of a payment accounts, or
-          * BBAN, for payment accounts if there is no IBAN, or
-          * the Primary Account Number (PAN) of a card, can be tokenised by the ASPSP due to PCI DSS requirements, or
-          * the Primary Account Number (PAN) of a card in a masked form, or
-          * an alias to access a payment account via a registered mobile phone number (MSISDN).
-      type: object
-      properties:
-        iban:
-          $ref: "#/components/schemas/iban"
-        bban:
-          $ref: "#/components/schemas/bban"
-        pan:
-          $ref: "#/components/schemas/pan"
-        maskedPan:
-          $ref: "#/components/schemas/maskedPan"
-        msisdn:
-          $ref: "#/components/schemas/msisdn"
-        currency:
-          $ref: "#/components/schemas/currencyCode"
 
     accountReport:
       description: |
@@ -389,64 +335,6 @@ components:
         - "deleted"
         - "blocked"
 
-    address:
-      type: object
-      required:
-        - country
-      properties:
-        streetName:
-          type: string
-          maxLength: 70
-        buildingNumber:
-          type: string
-        townName:
-          type: string
-        postCode:
-          type: string
-        country:
-          $ref: "#/components/schemas/countryCode"
-      example:
-        {
-          street: "rue blue",
-          buildingnNumber: "89",
-          city: "Paris",
-          postalCode: "75000",
-          country: "FR"
-        }
-
-    amount:
-      type: object
-      required:
-        - currency
-        - amount
-      properties:
-        currency:
-          $ref: "#/components/schemas/currencyCode"
-        amount:
-          $ref: "#/components/schemas/amountValue"
-      example:
-        {
-          "currency": "EUR",
-          "amount": "123"
-        }
-
-    amountValue:
-      description: |
-        The amount given with fractional digits, where fractions must be compliant to the currency definition.
-        Up to 14 significant figures. Negative amounts are signed by minus.
-        The decimal separator is a dot.
-
-        **Example:**
-        Valid representations for EUR with up to two decimals are:
-
-          * 1056
-          * 5768.2
-          * -1.50
-          * 5877.78
-      type: string
-      pattern: "-?[0-9]{1,14}(\\\\.[0-9]{1,3})?"
-      example: "5877.78"
-
     bankTransactionCode:
       description: |
         Bank transaction code as used by the ASPSP and using the sub elements of this structured code defined by ISO 20022.
@@ -465,53 +353,10 @@ components:
       type: string
       format: date
 
-    bban:
-      description: |
-        Basic Bank Account Number (BBAN) Identifier.
-
-        This data element can be used in the body of the Consent request.
-          Message for retrieving Account access Consent from this Account. This
-          data elements is used for payment Accounts which have no IBAN.
-          ISO20022: Basic Bank Account Number (BBAN).
-
-          Identifier used nationally by financial institutions, i.e., in individual countries,
-          generally as part of a National Account Numbering Scheme(s),
-          which uniquely identifies the account of a customer.
-      type: string
-      pattern: "[a-zA-Z0-9]{1,30}"
-      example: "BARC12345612345678"
-
-    bicfi:
-      description: |
-        BICFI
-      type: string
-      pattern: "[A-Z]{6,6}[A-Z2-9][A-NP-Z0-9]([A-Z0-9]{3,3}){0,1}"
-      example: "AAAADEBBXXX"
-
     cashAccountType:
       description: |
         ExternalCashAccountType1Code from ISO 20022.
       type: string
-
-
-    countryCode:
-      description: ISO 3166 ALPHA2 country code.
-      type: string
-      pattern: "[A-Z]{2}"
-      example: "SE"
-
-    creditorName:
-      description: Creditor Name.
-      type: string
-      maxLength: 70
-      example: "Creditor Name"
-
-    currencyCode:
-      description: |
-        ISO 4217 Alpha 3 currency code.
-      type: string
-      pattern: "[A-Z]{3}"
-      example: "EUR"
 
     debtorName:
       description: Debtor Name.
@@ -531,12 +376,6 @@ components:
       type: string
       example: "https://www.example.com/path/resource?parameter=value"
 
-    iban:
-      type: string
-      description: International bank account number ISO 31616.
-      pattern: "[A-Z]{2,2}[0-9]{2,2}[a-zA-Z0-9]{1,30}"
-      example: "FR7612345987650123456789014"
-
     linksAccountDetails:
       description: |
         Links to the account, which can be directly used for retrieving account information from this dedicated account.
@@ -550,30 +389,6 @@ components:
           $ref: "#/components/schemas/hrefType"
         transactions:
           $ref: "#/components/schemas/hrefType"
-
-    maskedPan:
-      description: |
-        Masked Primary Account Number.
-      type: string
-      maxLength: 35
-      example: "123456xxxxxx1234"
-
-    msisdn:
-      type: string
-      maxLength: 35
-      description: Mobile phone number.
-      example: "+49 170 1234567"
-
-    pan:
-      description: |
-        Primary Account Number according to ISO/IEC 7812.
-      type: string
-      maxLength: 35
-      #According to ISO the following should be valid.
-      #maxLength: 19
-      #minLength: 8
-      #pattern: "[0-9]{8,19}"
-      example: "5409050000000000"
 
     proprietaryBankTransactionCode:
       description: |
@@ -901,13 +716,13 @@ components:
         - quotationDate
       properties:
         sourceCurrency:
-          $ref: "#/components/schemas/currencyCode"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/currencyCode"
         exchangeRate:
           type: string
         unitCurrency:
           type: string
         targetCurrency:
-          $ref: "#/components/schemas/currencyCode"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/currencyCode"
         quotationDate:
           type: string
           format: date
@@ -955,13 +770,13 @@ components:
           type: string
           format: date
         transactionAmount:
-          $ref: "#/components/schemas/amount"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/amount"
         currencyExchange:
           $ref: "#/components/schemas/reportExchangeRateList"
         creditorName:
-          $ref: "#/components/schemas/creditorName"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/creditorName"
         creditorAccount:
-          $ref: "#/components/schemas/accountReference"
+          $ref: "./tpp_banking_api_commons.yml#/components/schemas/accountReference"
         ultimateCreditor:
           $ref: "#/components/schemas/ultimateCreditor"
         debtorName:
