--- a/opba-protocols/xs2a-protocol/src/main/resources/application.yml
+++ b/opba-protocols/xs2a-protocol/src/main/resources/application.yml
@@ -34,6 +34,13 @@ protocol:
         result: ${protocol.embedded-ui-base-url}/pis/#{context.getAuthorizationSessionIdIfOpened()}/consent-result?redirectCode=#{context.getRedirectCodeIfAuthContinued()}
   xs2a:
     urls:
+      pis:
+        redirect:
+          to-aspsp: ${protocol.embedded-ui-base-url}/pis/#{context.getAuthorizationSessionIdIfOpened()}/to-aspsp-redirection
+          payments:
+            ok:  ${protocol.embedded-ui-base-url}/v1/payment/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/ok?redirectCode=#{context.getAspspRedirectCode()}
+            nok: ${protocol.embedded-ui-base-url}/v1/payment/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/nok?redirectCode=#{context.getAspspRedirectCode()}
+            result: ${protocol.embedded-ui-base-url}/pis/#{context.getAuthorizationSessionIdIfOpened()}/consent-result?redirectCode=#{context.getRedirectCodeIfAuthContinued()}
       redirect:
         to-aspsp: ${facade.urls.embedded-ui-base-url}/ais/#{context.getAuthorizationSessionIdIfOpened()}/to-aspsp-redirection
         consent-accounts:
