add IBAN validator

--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -28,7 +28,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-iban": "^0.2.0",
     "bootstrap": "^4.4.1",
+    "iban": "0.0.14",
     "ng-http-loader": "^6.0.1",
     "ng-swagger-gen": "^2.2.0",
     "rxjs": "^6.5.2",
