--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_pis.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_pis.yml
@@ -18,6 +18,7 @@ paths:
       parameters:
         #header
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Timestamp-UTC"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Operation-Type"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-Signature"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/ServiceSessionPassword"
@@ -26,7 +27,7 @@ paths:
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-OK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Service-Session-ID"
-        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"        #path
         #path
         - $ref: '#/components/parameters/PaymentProduct'
       requestBody:
