--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-wiremock/src/main/resources/application-test-mocked-sandbox.yml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-wiremock/src/main/resources/application-test-mocked-sandbox.yml
@@ -28,3 +28,7 @@ protocol:
         web-hooks:
           ok: ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/ok?redirectCode=#{context.getAspspRedirectCode()}
           nok: ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/nok?redirectCode=#{context.getAspspRedirectCode()}
+      pis:
+        web-hooks:
+          ok: ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/ok?redirectCode=#{context.getAspspRedirectCode()}
+          nok: ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/nok?redirectCode=#{context.getAspspRedirectCode()}
