--- a/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
+++ b/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
@@ -423,10 +423,7 @@ components:
       content:
         application/json:
           schema:
-            type: object
-            properties:
-              consentAuth:
-                $ref: "#/components/schemas/ConsentAuth"
+            $ref: "#/components/schemas/ConsentAuth"
 
     302_Redirect_to_ASPSP:
       description: |
@@ -827,6 +824,12 @@ components:
           $ref: "#/components/schemas/BulkPayment"
         consent:
           $ref: "#/components/schemas/AisConsentRequest"
+        bankName:
+          type: string
+          description: Name of current bank
+        fintechName:
+          type: string
+          description: Name of current fintech
         consentAuthState:
           type: string
           description:
